// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorMain should correctly render for an error page for News 1`] = `
.c4 {
  color: #222222;
  border-bottom: 1px solid #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4:visited {
  color: #6E6E73;
  border-bottom: 1px solid #6E6E73;
}

.c4:focus,
.c4:hover {
  border-bottom: 2px solid #B80000;
  color: #B80000;
}

.c1 {
  font-size: 1.25rem;
  line-height: 1.5rem;
  color: #B80000;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 600;
  padding: 2.5rem 0 0.5rem 0;
}

.c2 {
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #3F3F42;
  margin-top: 0;
}

.c0 {
  padding-bottom: 4rem;
}

.c3 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
  padding-top: 0.2rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c1 {
    font-size: 1.375rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    font-size: 1.75rem;
    line-height: 2rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c2 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c2 {
    font-size: 2.75rem;
    line-height: 3rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c3 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c3 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

<div
  class="c0"
>
  <span
    class="c1"
  >
    StatusCode
  </span>
  <h1
    class="c2"
    id="content"
    tabindex="-1"
  >
    A error has occured
  </h1>
  <p
    class="c3"
  >
    Something happened, please try an option
  </p>
  <ul>
    <li
      class="c3"
    >
      Option one
    </li>
    <li
      class="c3"
    >
      Option two
    </li>
  </ul>
  <p
    class="c3"
  >
    You can do 
    <a
      class="c4"
      href="https://www.bbc.com"
    >
      this
    </a>
     thing
  </p>
</div>
`;

exports[`ErrorMain should correctly render for an error page for arabic 1`] = `
.c4 {
  color: #222222;
  border-bottom: 1px solid #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4:visited {
  color: #6E6E73;
  border-bottom: 1px solid #6E6E73;
}

.c4:focus,
.c4:hover {
  border-bottom: 2px solid #B80000;
  color: #B80000;
}

.c1 {
  font-size: 1.5rem;
  line-height: 1.875rem;
  color: #B80000;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 600;
  padding: 2.5rem 0 0.5rem 0;
}

.c2 {
  font-size: 2rem;
  line-height: 2.625rem;
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #3F3F42;
  margin-top: 0;
}

.c0 {
  padding-bottom: 4rem;
}

.c3 {
  font-size: 1.125rem;
  line-height: 1.75rem;
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
  padding-top: 0.2rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c1 {
    font-size: 1.75rem;
    line-height: 2.5rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    font-size: 2rem;
    line-height: 2.5rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c2 {
    font-size: 2.375rem;
    line-height: 2.875rem;
  }
}

@media (min-width:37.5rem) {
  .c2 {
    font-size: 2.75rem;
    line-height: 3.375rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c3 {
    font-size: 1.375rem;
    line-height: 2rem;
  }
}

@media (min-width:37.5rem) {
  .c3 {
    font-size: 1.375rem;
    line-height: 2rem;
  }
}

<div
  class="c0"
>
  <span
    class="c1"
  >
    StatusCode
  </span>
  <h1
    class="c2"
    id="content"
    tabindex="-1"
  >
    A error has occured
  </h1>
  <p
    class="c3"
  >
    Something happened, please try an option
  </p>
  <ul>
    <li
      class="c3"
    >
      Option one
    </li>
    <li
      class="c3"
    >
      Option two
    </li>
  </ul>
  <p
    class="c3"
  >
    You can do 
    <a
      class="c4"
      href="https://www.bbc.com"
    >
      this
    </a>
     thing
  </p>
</div>
`;

exports[`ErrorMain should correctly render for an error page for pashto 1`] = `
.c4 {
  color: #222222;
  border-bottom: 1px solid #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4:visited {
  color: #6E6E73;
  border-bottom: 1px solid #6E6E73;
}

.c4:focus,
.c4:hover {
  border-bottom: 2px solid #B80000;
  color: #B80000;
}

.c1 {
  font-size: 1.5rem;
  line-height: 1.875rem;
  color: #B80000;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 600;
  padding: 2.5rem 0 0.5rem 0;
}

.c2 {
  font-size: 2rem;
  line-height: 2.625rem;
  font-family: "BBC Nassim Pashto",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #3F3F42;
  margin-top: 0;
}

.c0 {
  padding-bottom: 4rem;
}

.c3 {
  font-size: 1.125rem;
  line-height: 1.75rem;
  font-family: "BBC Nassim Pashto",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
  padding-top: 0.2rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c1 {
    font-size: 1.75rem;
    line-height: 2.5rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    font-size: 2rem;
    line-height: 2.5rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c2 {
    font-size: 2.375rem;
    line-height: 2.875rem;
  }
}

@media (min-width:37.5rem) {
  .c2 {
    font-size: 2.75rem;
    line-height: 3.375rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c3 {
    font-size: 1.375rem;
    line-height: 2rem;
  }
}

@media (min-width:37.5rem) {
  .c3 {
    font-size: 1.375rem;
    line-height: 2rem;
  }
}

<div
  class="c0"
>
  <span
    class="c1"
  >
    StatusCode
  </span>
  <h1
    class="c2"
    id="content"
    tabindex="-1"
  >
    A error has occured
  </h1>
  <p
    class="c3"
  >
    Something happened, please try an option
  </p>
  <ul>
    <li
      class="c3"
    >
      Option one
    </li>
    <li
      class="c3"
    >
      Option two
    </li>
  </ul>
  <p
    class="c3"
  >
    You can do 
    <a
      class="c4"
      href="https://www.bbc.com"
    >
      this
    </a>
     thing
  </p>
</div>
`;

exports[`ErrorMain should correctly render for an error page for persian 1`] = `
.c4 {
  color: #222222;
  border-bottom: 1px solid #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4:visited {
  color: #6E6E73;
  border-bottom: 1px solid #6E6E73;
}

.c4:focus,
.c4:hover {
  border-bottom: 2px solid #B80000;
  color: #B80000;
}

.c1 {
  font-size: 1.5rem;
  line-height: 1.875rem;
  color: #B80000;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 600;
  padding: 2.5rem 0 0.5rem 0;
}

.c2 {
  font-size: 2rem;
  line-height: 2.625rem;
  font-family: "BBC Nassim Persian",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #3F3F42;
  margin-top: 0;
}

.c0 {
  padding-bottom: 4rem;
}

.c3 {
  font-size: 1.125rem;
  line-height: 1.75rem;
  font-family: "BBC Nassim Persian",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
  padding-top: 0.2rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c1 {
    font-size: 1.75rem;
    line-height: 2.5rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    font-size: 2rem;
    line-height: 2.5rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c2 {
    font-size: 2.375rem;
    line-height: 2.875rem;
  }
}

@media (min-width:37.5rem) {
  .c2 {
    font-size: 2.75rem;
    line-height: 3.375rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c3 {
    font-size: 1.375rem;
    line-height: 2rem;
  }
}

@media (min-width:37.5rem) {
  .c3 {
    font-size: 1.375rem;
    line-height: 2rem;
  }
}

<div
  class="c0"
>
  <span
    class="c1"
  >
    StatusCode
  </span>
  <h1
    class="c2"
    id="content"
    tabindex="-1"
  >
    A error has occured
  </h1>
  <p
    class="c3"
  >
    Something happened, please try an option
  </p>
  <ul>
    <li
      class="c3"
    >
      Option one
    </li>
    <li
      class="c3"
    >
      Option two
    </li>
  </ul>
  <p
    class="c3"
  >
    You can do 
    <a
      class="c4"
      href="https://www.bbc.com"
    >
      this
    </a>
     thing
  </p>
</div>
`;

exports[`ErrorMain should correctly render for an error page for urdu 1`] = `
.c4 {
  color: #222222;
  border-bottom: 1px solid #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4:visited {
  color: #6E6E73;
  border-bottom: 1px solid #6E6E73;
}

.c4:focus,
.c4:hover {
  border-bottom: 2px solid #B80000;
  color: #B80000;
}

.c1 {
  font-size: 1.5rem;
  line-height: 1.875rem;
  color: #B80000;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 600;
  padding: 2.5rem 0 0.5rem 0;
}

.c2 {
  font-size: 2rem;
  line-height: 2.625rem;
  font-family: "BBC Nassim Urdu",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #3F3F42;
  margin-top: 0;
}

.c0 {
  padding-bottom: 4rem;
}

.c3 {
  font-size: 1.125rem;
  line-height: 1.75rem;
  font-family: "BBC Nassim Urdu",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
  padding-top: 0.2rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c1 {
    font-size: 1.75rem;
    line-height: 2.5rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    font-size: 2rem;
    line-height: 2.5rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c2 {
    font-size: 2.375rem;
    line-height: 2.875rem;
  }
}

@media (min-width:37.5rem) {
  .c2 {
    font-size: 2.75rem;
    line-height: 3.375rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c3 {
    font-size: 1.375rem;
    line-height: 2rem;
  }
}

@media (min-width:37.5rem) {
  .c3 {
    font-size: 1.375rem;
    line-height: 2rem;
  }
}

<div
  class="c0"
>
  <span
    class="c1"
  >
    StatusCode
  </span>
  <h1
    class="c2"
    id="content"
    tabindex="-1"
  >
    A error has occured
  </h1>
  <p
    class="c3"
  >
    Something happened, please try an option
  </p>
  <ul>
    <li
      class="c3"
    >
      Option one
    </li>
    <li
      class="c3"
    >
      Option two
    </li>
  </ul>
  <p
    class="c3"
  >
    You can do 
    <a
      class="c4"
      href="https://www.bbc.com"
    >
      this
    </a>
     thing
  </p>
</div>
`;
